--- a/res.rc
+++ b/res.rc
@@ -3,8 +3,8 @@
 IDI_ICON1 ICON DISCARDABLE "icon.ico"
 
 1 VERSIONINFO
-	FILEVERSION 1,0,0,0
-	PRODUCTVERSION 1,0,0,0
+	FILEVERSION 2,2,0,1
+	PRODUCTVERSION 2,2,0,1
     FILEFLAGSMASK 0x3fL
 	FILEFLAGS 0x0L
 	FILEOS VOS_NT_WINDOWS32
@@ -14,13 +14,13 @@ IDI_ICON1 ICON DISCARDABLE "icon.ico"
 		BEGIN
 			BLOCK "000004b0"
 			BEGIN
-				VALUE "CompanyName", "LinkHope Technology Co.,Ltd."
-				VALUE "FileDescription", "Serial Board Demo"
-				VALUE "FileVersion", "1.0.0.0"
-				VALUE "LegalCopyright", "Copyright (c) 2011-2015 LinkHope Technology Co.,Ltd."
-				VALUE "InternalName", "3302"
-				VALUE "ProductName", "LH-3302 Serial Board"
-				VALUE "ProductVersion", "1.0.0.0"
+				VALUE "CompanyName", ""
+				VALUE "FileDescription", "Serial Port Test Tool"
+				VALUE "FileVersion", "2.2.0.1"
+				VALUE "LegalCopyright", ""
+				VALUE "InternalName", "comtest"
+				VALUE "ProductName", "comtest"
+				VALUE "ProductVersion", "2.2.0.1"
 			END
 		END
 		
